--- a/css/style.css
+++ b/css/style.css
@@ -86,14 +86,15 @@ textarea {
 /*------------- Base Header - Footer Styles ----------------*/
 header,
 footer {
-  display: flex;
 }
 
 header {
+  display: flex;
   justify-content: center;
 }
 
 footer {
+  display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
@@ -137,13 +138,13 @@ footer {
   text-align: center;
  }
 
- footer social-icons {
+ footer .social-icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
  }
 
- footer social p {
+ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
