--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,64 @@ textarea {
    Author's custom styles
    ========================================================================== */
 /*------------- Base Styles ----------------*/
+
+html {
+  font-size: 1rem;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+  text-align: left;
+}
+
+ul,
+ol {
+  list-style-type: none;
+}
+
+a {
+  color: #e2e3ed;
+  text-decoration: none;
+}
+
+h1 {
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  font-size: 2.25em;
+  line-height: 2.6875em;
+  font-weight: 500;
+}
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.875em;
+  font-weight: 500;
+}
+
+h3,
+h4 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.125em;
+  font-weight: 500;
+}
+
+p {
+  font-size: .875em;
+  line-height: 1.125em;
+}
+
+img {
+
+}
+
+figure {
+
+}
+
+address {
+  font-size: 1em;
+}
+
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
@@ -116,6 +174,8 @@ textarea {
 
  header nav {
   width: 60%;
+  font-size: 1.125em;
+  font-weight: bold;
  }
 
  header nav ul {
@@ -145,6 +205,7 @@ textarea {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  size: 1.3125em;
  }
 
  footer .social-icons p {
@@ -173,6 +234,12 @@ aside {
   justify-content: center;
 }
 
+aside .input-text {
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  font-size: 1.125em;
+  font-weight: 500;
+}
+
 
 /* Features */
 .features {
@@ -199,12 +266,20 @@ aside {
 .features article {
   width: 63%;
   margin: 30px 0;
- }
+}
+
+.features .features-icons {
+  size: 3.75em;
+}
 
 /* Reviews */
 .reviews {
   display: flex;
   justify-content: center;  
+}
+
+.reviews h2 {
+  line-height: 1.875em;
 }
 
 .reviews h3 {
@@ -242,10 +317,15 @@ aside {
 
 .faq h2 {
   margin: 40px;
+  line-height: 1.875em;
 }
 
 .faq-content {
   margin-bottom: 50px;
+}
+
+.faq-content h4 {
+  line-height: 1.5em;
 }
 
 /* Footer */
@@ -349,6 +429,21 @@ footer {
     margin: 100px 0;
   }
 
+  h1 {
+    font-size: 3em;
+    line-height: 3em;
+  }
+
+  h2 {
+    font-size: 2.25em;
+    line-height: 3em;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    line-height: 1.875em;
+  }
+
   /*Header*/
 
   header {
@@ -397,7 +492,7 @@ footer {
   }
 
   .features .features-item-description {
-    width: 50%;
+    width: 62%;
   }
 
   /*Reviews */
@@ -445,6 +540,12 @@ footer {
     width: 100%;
   }
 
+  .faq h4,
+  .faq p {
+    font-size: 0.875em;
+    line-height: 0.984375em;
+  }
+
   /* Footer */
   footer .content-wrapper {
     width: 65%;
@@ -464,6 +565,15 @@ footer {
   footer .copyright {
     width: 100%;
   }
+
+  footer,
+  footer .contact h4 {
+    font-size: 1.5em;
+  }
+
+  footer p {
+    line-height: 1.125em;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
@@ -475,6 +585,24 @@ footer {
 
   .content-wrapper {
     max-width: 960px;
+  }
+
+  h1 {
+    font-size: 3.75em;
+  }
+
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3,
+  h4 {
+    font-size: 1.875em;
+  }
+
+  p {
+    font-size: 1.125em;
+    line-height: 1.5em;
   }
 
   /*Hero*/
@@ -513,9 +641,19 @@ footer {
     width: 95%;
   }
 
+  .mission h2 {
+    font-size: 3em;
+  }
+
   /*FAQ Page*/
   .faq h2 {
     width: 100%;
+    font-size: 3em;
+  }
+
+  .faq h4 {
+    font-size: 1.125em;
+    line-height: 1.125em;
   }
 
 }
