--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,7 @@ address {
   display: flex;
   justify-content: center;
   padding: 15px 0;
+  background-color: #202322;
  }
 
  header .content-wrapper {
@@ -170,6 +171,7 @@ address {
  .header-divider {
   width: 100%;
   height: 1px;
+  color: #3a3a3a;
  }
 
  header nav {
@@ -190,6 +192,7 @@ address {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  background-color: #202322;
  }
 
  footer p {
@@ -206,6 +209,7 @@ address {
   justify-content: space-around;
   align-items: center;
   size: 1.3125em;
+  background-color: #527158;
  }
 
  footer .social-icons p {
@@ -232,12 +236,32 @@ address {
 aside {
   display: flex;
   justify-content: center;
+  background-color: #527158;
 }
 
-aside .input-text {
+aside .form {
+  margin-top: 30px;
+}
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
   font-size: 1.125em;
   font-weight: 500;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 
@@ -275,7 +299,8 @@ aside .input-text {
 /* Reviews */
 .reviews {
   display: flex;
-  justify-content: center;  
+  justify-content: center;
+  background-color: #2a423a;  
 }
 
 .reviews h2 {
@@ -290,6 +315,7 @@ aside .input-text {
 .mission {
   display: flex;
   justify-content: center;
+  background-color: #527158;
 }
 
 .contact-section {
@@ -305,6 +331,7 @@ aside .input-text {
 .faq {
   display: flex;
   justify-content: center;
+  background-color: #527158;
 }
 
 .faq .content-wrapper {
@@ -322,6 +349,7 @@ aside .input-text {
 
 .faq-content {
   margin-bottom: 50px;
+  background-color: #2a423a;
 }
 
 .faq-content h4 {
